      changing the name was required as we wanted to import symbols for use in compilation_db
      tool.
    - Add CompilationDatabase() builder in compilation_db tool. Contributed by MongoDB.
      Setting COMPILATIONDB_USE_ABSPATH to True|False controls whether the files are absolute or relative
      paths.  Address Issue #3693 and #3694 found during development.

  From Andrii Doroshenko:
    - Extended `Environment.Dump()` to select a format to serialize construction variables (pretty, json).

  From Jeremy Elson:
    - Updated design doc to use the correct syntax for Depends()

  From Adam Gross:
    - Added support for scanning multiple entries in an action string if
      IMPLICIT_COMMAND_DEPENDENCIES is set to 2 or 'all'. This enables more thorough
      action scanning where every item in each command line is scanned to determine
      if it is a non-source and non-target path and added to the list of implicit dependencies
      for the target.
    - Added support for taking instances of the Value class as implicit
      dependencies.
    - Added new module SCons.Scanner.Python to allow scanning .py files.
    - Added support for explicitly passing a name when creating Value() nodes. This may be useful
      when the value can't be converted to a string or if having a name is otherwise desirable.
    - Fixed usage of abspath and path for RootDir objects on Windows. Previously
      env.fs.Dir("T:").abspath would return "T:\T:" and now it correctly returns "T:".

  From Iosif Kurazs:
    - Added a new flag called "linedraw" for the command line argument  "--tree"
      that instructs scons to use single line drawing characters to draw the dependency tree.

  From Ivan Kravets, PlatformIO
    - New conditional C Scanner (`SCons.Scanner.C.CConditionalScanner()`)
      which interprets C/C Preprocessor conditional syntax (#ifdef, #if, #else,
      #elif, #define, etc.)
    - Improvements for virtual C Pre-Processor: